src/main/java/com/example/restaurant/error/EmailAlreadyExistsException.java
package com.example.restaurant.error;

public class EmailAlreadyExistsException extends RuntimeException {
}
